--- a/Tesis_latex/capitulos/1_introduccion.tex
+++ b/Tesis_latex/capitulos/1_introduccion.tex
@@ -1,5 +1,5 @@
 \chapter{Introducción}
-\input{sections/1_0_mapa_de_trabajo.tex}
 \input{sections/1_1_apportionment.tex}
 \input{sections/1_2_setting.tex}
 \input{sections/1_3_ejemplos.tex}
+\input{sections/1_4_paradojas.tex}
