--- a/Tesis_latex/capitulos/4_trabajo.tex
+++ b/Tesis_latex/capitulos/4_trabajo.tex
@@ -1,3 +1,6 @@
 \chapter{Trabajo realizado}
 
+En este capítulo presentaremos algunas ideas que fueron surgiendo en relación a los métodos aleatorizados: 
+3 propuestas de métodos nuevos, sus respectivos análisis, e intentos de estudiar propiedades de algunos métodos ya existentes.
+
 \input{sections/4_1_resultados.tex}
