--- a/Tesis_latex/capitulos/n_notas.tex
+++ b/Tesis_latex/capitulos/n_notas.tex
@@ -1,28 +1,44 @@
 \section{Ejemplos de cosas}
 \begin{itemize}
     \item Ejemplo de population paradox con Hamilton: \cita{balinski1982fair} pág. 69, tabla 8.1
-    \item Desarrollo de mayoración: \cita{pukkelsheim2017} cap. 8
+    \item Desarrollo de mayoración: \cita{pukelsheim2017} cap. 8
 \end{itemize}
 
+\section{Temas a charlar en la reu}
+\begin{itemize}
+    \item Definir nombres de las secciones para las pruebas que fui haciendo. 
+    orden lexicográfico? Función objetivo lineal con pesos decrecientes por orden lexicográfico sobre subconjuntos de cardinal k  
+    \item Nombre de la primera sección: Introducción al problema de \textit{apportionment}
+    Se introduce también el trabajo de la tesis, así que capaz debería cambiar el título.
+\end{itemize}
 
 \section{Títulos posibles}
 \begin{itemize}
     \item "Una aproximación al problema de apportionment: métodos aleatorizados"
-    \item \item "Una aproximación al problema de apportionment: métodos aleatorizados para distribución de bancas del congreso"
+    \item "Una aproximación al problema de apportionment: métodos aleatorizados para distribución de bancas del congreso"
     \item "Una aproximación al problema de apportionment: análisis y propuestas de sistemas de distribución 
     de bancas aleatorizados"
     \item "Una aproximación al problema de apportionment a través del análisis y propuestas de sistemas de distribución 
     de bancas aleatorizados"
     \item "Una aproximación al problema de apportionment: distribuyendo las bancas del congreso aleatoriamente"
+    \item "Métodos aleatorizados de asignación de bancas y optimización lineal junto a algunos resultados de imposibilidad"
+    \item "Asignación aleatorizada de bancas y algunos resultados de imposibilidad"
 \end{itemize}
 
 
 \section{Cosas a corregir/agregar}
 \begin{itemize}
-    \item Terminar gráfico de elecciones en Apportia
-    \item $D-$quota para referirse a $\frac{v_i}{D}$
-    \item D'Hont favorece mayorías
+    \item Ser más concluyente con el teorema de imposibilidad de Balinski y Young
+    \item Demostración por inducción de que Brewer es ex-ante
+    \item Demostración de que los métodos de divisor satisfacen anonimidad, balance, concordancia, decencia y exactitud.
+    \item Agregar definición del intervalo D de divisores posibles luego de la desigualdad max-min.
+    \item Relación con el problema del stopping game. Ver Balinski y Young.
+    \item De todos los métodos de divisor, el de Webster es el que tiene mayor probabilidad de satisfacer quota.
+    \item Buscar otra caracterización del método Saint-Laguë y demostrar equivalencia con el que ya está enunciado.
+    \item D'Hondt favorece mayorías
     \item Métodos determinísticos optimales, distintas métricas de optimalidad y equivalencias con métodos existentes
     \item ¿Por qué selection monotonicity no se plantea en términos de los votos en lugar de los restos?
-    \item 
 \end{itemize}
+
+\section{Cosas sacadas (se pueden volver a agregar)}
+    
