--- a/Tesis_latex/preambulo.tex
+++ b/Tesis_latex/preambulo.tex
@@ -30,7 +30,7 @@
 \usepackage{placeins}
 
 % Nombres en español
-\addto\captionsspanish{\renewcommand{\proofname}{\textbf{Prueba:}}}
+\addto\captionsspanish{\renewcommand{\proofname}{\textbf{Demostración:}}}
 \addto\captionsspanish{\renewcommand{\tablename}{Tabla}}
 
 % Estilo de teoremas (numerados por capítulo; cambia [chapter] por [section] si prefieres)
@@ -84,6 +84,7 @@
 % Otros paquetes útiles
 \usepackage{enumitem}
 \usepackage{csquotes} % Recomendado con biblatex
+\usepackage{dirtytalk}
 
 % Bibliografía
 \usepackage[
