--- a/Tesis_latex/referencias.bib
+++ b/Tesis_latex/referencias.bib
@@ -1,6 +1,6 @@
-@book{pukkelsheim2017,
+@book{pukelsheim2017,
   title={Proportional Representation},
-  author={Pukkelsheim, Friedrich},
+  author={Pukelsheim, Friedrich},
   year={2017},
   publisher={Springer}
 }
@@ -136,6 +136,26 @@ abstract = {A new proof of the Coherence Theorem of Balinski and Young is presen
   year = 1997
 }
 
+@online{mileiarrow2023,
+  author       = {TV},
+  title        = {¿Vos conocés el teorema de imposibilidad de Arrow?},
+  year         = {2023},
+  url          = {@https://www.youtube.com/shorts/YWbVegIKbHY},
+  organization = {YouTube},
+  urldate      = {2025}
+}
+
+@book{suzumura1983rational,
+  title={Rational Choice, Collective Decisions, and Social Welfare},
+  author={Suzumura, K.},
+  isbn={9780521122559},
+  lccn={82022110},
+  series={Paperback reissue},
+  url={https://books.google.com.ar/books?id=GVg5yfYNMD8C},
+  year={1983},
+  publisher={Cambridge University Press}
+}
+
 @misc{singh2013entropyoptimizationcounting,
 title={Entropy, Optimization and Counting}, 
 author={Mohit Singh and Nisheeth K. Vishnoi},
@@ -160,6 +180,19 @@ url={https://arxiv.org/abs/1304.8108},
     doi = {10.1093/biomet/81.3.457},
     url = {https://doi.org/10.1093/biomet/81.3.457},
     eprint = {https://academic.oup.com/biomet/article-pdf/81/3/457/713811/81-3-457.pdf},
+}
+
+@article{ASENS_1910_3_27__529_0,
+     author = {Sainte-Lagu\"e, A.},
+     title = {La repr\'esentation proportionnelle et la m\'ethode des moindres carr\'es},
+     journal = {Annales scientifiques de l'\'Ecole Normale Sup\'erieure},
+     pages = {529--542},
+     publisher = {Elsevier},
+     volume = {3e s{\'e}rie, 27},
+     year = {1910},
+     doi = {10.24033/asens.627},
+     language = {fr},
+     url = {https://www.numdam.org/articles/10.24033/asens.627/}
 }
 
 @article{Grimmett01042004,
