--- a/Tesis_latex/sections/1_0_mapa_de_trabajo.tex
+++ b/Tesis_latex/sections/1_0_mapa_de_trabajo.tex
@@ -8,7 +8,7 @@
 
 *2. Desarrollo teórico*
 - Resultados sobre divisor methods
-- D'Hont favorece mayorías
+- D'Hondt favorece mayorías
 - Teoremas de Balinski y Young
 - Conclusiones y algunos resultados extra
 
@@ -26,7 +26,5 @@
     - Análisis mediante bases, búsqueda de contraejemplo
 - Propuesta de método restrictivo
 
-*5. Problemas abiertos*
+*5. Conclusiones y problemas abiertos*
 - Todos
-
-*6. Conclusiones y cierre*
