--- a/Tesis_latex/sections/3_1_intro_metodos_aleatorizados.tex
+++ b/Tesis_latex/sections/3_1_intro_metodos_aleatorizados.tex
@@ -17,8 +17,8 @@ Introducimos ahora
 
 \begin{itemize}
 \item $\vec{p} = (p_1, \dots, p_n)$ vector de restos, con $p_i = q_i - \lfloor q_i \rfloor$.
-Observamos que $ 0 \leq p_i < 1 \ \forall \ 1 \leq i \leq n$
-\item Para un conjunto $S$ y $k \in \mathbb{N}$, definimos $ \binom{S}{k} := \{ T \subseteq S \ / \ |T| = k \}$
+Observamos que $ 0 \leq p_i < 1 \ \text{ para todo } \ 1 \leq i \leq n$.
+\item Para un conjunto $S$ y $k \in \mathbb{N}$, definimos $ \binom{S}{k} := \{ T \subseteq S \ / \ |T| = k \}$.
 \end{itemize}
 
 Los métodos aleatorizados \textit{quota-compliant} serán aquellos que asignen, en primer lugar, $\lfloor q_i \rfloor$ bancas 
@@ -27,12 +27,12 @@ $p_i \in [0, 1)$ como probablilidades de asignación (los llamaremos también pr
 qué partidos asignarles las bancas remanentes.
 
 Como en la primera etapa se asignan $\sum_{i=1}^{n}{\lfloor q_i \rfloor}$ bancas, denominamos 
-$$k = \sum_{i = 1}^{n}{p_i} = H - \sum_{i=1}^{n}{\lfloor q_i \rfloor} \in {0, \dots, n-1}$$ 
+$$k = \sum_{i = 1}^{n}{p_i} = H - \sum_{i=1}^{n}{\lfloor q_i \rfloor} \in {\{0, \dots, n-1\}}$$ 
 a la cantidad de bancas pendientes de ser repartidas. 
 De esta forma, los métodos aleatorizados \textit{quota-compliant} buscarán elegir de forma aleatoria
 un conjunto $S \in \binom{[n]}{k}$ de los partidos a los que se les asignarán las bancas remanentes. Esta elección deberá
 respetar, de alguna forma, las probabilidades $p_i$. El primer requisito con el cual impondremos la condición de que se
-respeten estas probabilidades es una condición definida por Grimmet en \cita{Grimmett01042004}:
+respeten estas probabilidades es una condición definida por Grimmett en \cita{Grimmett01042004}:
 la \textit{proporcionalidad Ex-Ante}, que establece que la cantidad esperada de bancas que recibe un partido debe ser $q_i$.
 
 Consideraremos las funciones de redondeo aleatorizado que definiremos
@@ -45,13 +45,13 @@ a continuación, introduciendo primero la siguiente definición para simplificar
     El \textit{simplex de probabilidades} $n-$dimensional es
 
     \[
-        \Omega_n \vcentcolon= \left\{ \vec{w} \in [0;1)^n : w_+ = 1 \right\}
+        \Omega_n \vcentcolon= \left\{ \vec{w} \in [0;1)^n : w_+ = 1 \right\}.
     \]
     
     Su reescalamiento por $k$ es
 
     \[
-        \Omega_{n}^{k} \vcentcolon= \left\{ \vec{w} \in (0;1)^n : w_+ = k \right\}
+        \Omega_{n}^{k} \vcentcolon= \left\{ \vec{w} \in (0;1)^n : w_+ = k \right\}.
     \]
 \end{definition}
 
@@ -65,8 +65,8 @@ $\Omega_{n}^{k}$.
     en el conjunto seleccionado $r(\vec{p})$ debe ser igual a $p_i \ \forall \ i \in [n]$.         
 \end{definition}
 
-\noindent Una manera de reformular el problema es pensar en buscar $X_i \in \{ 0,1 \} \ / \ \sum_{i=1}^{n}{X_i} = K \ \wedge \ \mathbb{E}[X_i] = p_i$. 
-La distribución del vector $X = (X_1, \dots, X_n)$ estará dada por algún algoritmo aleatorizado, es decir, $r(\vec{p}) = \{ i \in [n]: X_i = 1 \}$. 
+\noindent Una manera de reformular el problema es pensar en buscar $X_i \in \{ 0,1 \} \ / \ \sum_{i=1}^{n}{X_i} = K \text{ y } \mathbb{E}[X_i] = p_i$. 
+La distribución del vector $X = (X_1, \dots, X_n)$ estará dada por algún algoritmo aleatorizado, es decir, $r(\vec{p}) = \{ i \in [n]: X_i = 1 \}$ 
 para algún método $r$.
 
 Existe una correspondencia biunívoca entre métodos de \textit{apportionment} \textit{quota-compliant} y proporcionales \textit{ex-ante}
@@ -102,7 +102,7 @@ extra asignadas a cada partido se corresponde con su resto $p_i$.
 
 Una regla de \textit{redondeo} $r$ verifica la propiedad de \textit{\textbf{monotonía de selección}} si dados $T \in \binom{[n]}{k}$ un conjunto de $k$ partidos, y $\ p,p' \in [0,1)^{n}$ dos vectores de residuos que suman $k$ tales que $p_i' \geq p_i \ \forall i \in T \ \wedge \ p_i' \leq p_i \ \forall i \notin T$,
 se tiene que 
-$$ \mathbb{P}_{S \sim r(\vec{p'})}[S=T] \geq \mathbb{P}_{S \sim r(\vec{p})}[S=T] $$
+$$ \mathbb{P}_{S \sim r(\vec{p'})}[S=T] \geq \mathbb{P}_{S \sim r(\vec{p})}[S=T] $$.
 \end{definition}
 
 
@@ -110,5 +110,5 @@ $$ \mathbb{P}_{S \sim r(\vec{p'})}[S=T] \geq \mathbb{P}_{S \sim r(\vec{p})}[S=T]
 (\textbf{Monotonía fuerte de selección})
 
 Una regla de \textit{redondeo} $r$ verifica la propiedad de \textit{\textbf{monotonía de selección}} si dados $T \subseteq [n]$ tal que $|T| \leq k$, y $\ p,p' \in [0,1)^{n}$ dos vectores de residuos que suman $k$ tales que $p_i' \geq p_i \ \forall i \in T \ \wedge \ p_i' \leq p_i \ \forall i \notin T$. Entonces
-$$ \mathbb{P}_{S \sim r(\vec{p'})}[T \subseteq S] \geq \mathbb{P}_{S \sim r(\vec{p})}[T \subseteq S] $$
+$$ \mathbb{P}_{S \sim r(\vec{p'})}[T \subseteq S] \geq \mathbb{P}_{S \sim r(\vec{p})}[T \subseteq S] $$.
 \end{definition}
